--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -40,3 +40,32 @@ a {
     color-scheme: dark;
   }
 }
+
+
+/*----------I ADDED THIS CODE----------*/
+
+.custom-button {
+  background-color: green;
+  color: white;
+  margin-top: 10px;
+  padding: 12px 25px;
+  border-radius: 8px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.custom-button:hover {
+  background-color: darkgreen;
+}
+
+.tag{
+  background-color: #f1f1f1;
+  color: #333;
+  border: 2px solid #333;
+  padding: 5px 10px;
+  border-radius: 5px;
+  margin-right: 5px;
+  margin-top: 5px;
+  display: inline-block;
+}
