--- a/frontend/src/app/components/Sprint15Tables/EliTable.css
+++ b/frontend/src/app/components/Sprint15Tables/EliTable.css
@@ -27,15 +27,15 @@
     width: 80%;
     position: absolute;
     top: 30%;
+    margin-right: 80px;
 }
 
 .Searchbar input[type="text"] {
     padding: 8px;
-    border-radius: 5px;
     border: 1px solid #ccc;
     flex-grow: 2;
-    margin-right: 10px;
-    min-width: 40vh;
+    margin-right: 15px;
+    min-width: 60vh;
 }
 
 .buttons {
@@ -46,21 +46,22 @@
 .addBtn, .brwBtn {
     padding: 8px 12px;
     border: none;
-    border-radius: 5px;
-    background-color: #007BFF;
+    background-color: #6e7781;
     color: white;
     cursor: pointer;
     transition: background-color 0.3s;
 }
 
 .addBtn:hover, .brwBtn:hover {
-    background-color: #0056b3;
+    background-color: #3c3e41;
 }
 
 .TableLabels {
     display: flex;
-    justify-content: space-around;
-    width: 100%;
+    justify-content: space-evenly;
+    width: 90%;
+    padding-left: 5vh;
+    padding-right: 10vh;
     position: absolute;
     bottom: 1px; 
 }
@@ -68,11 +69,9 @@
 .TableLabel {
     flex: 1;
     text-align: center;
-    font-weight: bold;
     padding: 10px 0;
     color: #333;
 }
-
 
 .ItemBarHolder {
     background-color: aliceblue;
@@ -80,5 +79,9 @@
     display: flex;
     height: 10vh;
     border-radius: 10px;
+}
+
+.ItemBar {
+    
 }
 
