--- a/frontend/src/app/components/Sprint15Tables/EliTable.css
+++ b/frontend/src/app/components/Sprint15Tables/EliTable.css
@@ -60,10 +60,12 @@
     display: flex;
     justify-content: space-evenly;
     width: 90%;
-    padding-left: 5vh;
+    padding-left: 8vh;
     padding-right: 10vh;
     position: absolute;
-    bottom: 1px; 
+    bottom: -2px; 
+    gap: -2vh;
+    font-size: 15px;
 }
 
 .TableLabel {
@@ -77,11 +79,19 @@
     background-color: aliceblue;
     width: 100%;
     display: flex;
-    height: 10vh;
+    height: 50vh;
     border-radius: 10px;
+    flex-direction: column;
 }
 
-.ItemBar {
-    
+
+.slider-container {
+
+    margin: 1vh 0;
+    text-align: center;
 }
 
+#unitSlider {
+    width: 80%;
+    margin-top: 1vh;
+}
