--- a/frontend/src/app/components/Sprint15Tables/EliUnit.css
+++ b/frontend/src/app/components/Sprint15Tables/EliUnit.css
@@ -51,7 +51,7 @@
 .picture img {
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Scales the image to cover the container without distortion */
+    object-fit: cover;
 }
 
 
