Added the number of items per page dropdown selection button
Co-authored-by: Elias Swartz <EliasThaKid@users.noreply.github.com>

--- a/frontend/src/app/components/15Tablecomp/EliUnit.css
+++ b/frontend/src/app/components/15Tablecomp/EliUnit.css
@@ -78,4 +78,21 @@
     border-radius: 4px; 
 }
 
+.pagination-controls {
+    display: flex;
+    justify-content:space-around;
+    flex-direction: row;
+    padding-bottom: 5%;
+}
+
+.num-items {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    padding-left: 3%;
+}
+
+.page-selection {
+    padding-right: 5%;
+}
 
