--- a/frontend/src/app/components/15Tablecomp/EliTable.css
+++ b/frontend/src/app/components/15Tablecomp/EliTable.css
@@ -1,7 +1,7 @@
 .Table {
     background-color: aliceblue;
     height: 80vh;
-    width: 90vh;
+    width: 90vw;
     display: flex;
     flex-direction: column; 
     border: 3px solid black;
@@ -10,7 +10,7 @@
 
 .Header {
     background-color: beige;
-    height: 30vh;
+    height: 30%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -18,6 +18,7 @@
     justify-content: flex-start;
     position: relative;
     border-radius: 10px;
+    padding: 3%;
 }
 
 .Items {
@@ -60,12 +61,12 @@
     display: flex;
     justify-content: space-evenly;
     width: 90%;
-    padding-left: 8vh;
-    padding-right: 10vh;
+    padding-left: 8%;
+    padding-right: 10%;
     position: absolute;
     bottom: -2px; 
     gap: -2vh;
-    font-size: 15px;
+    font-size: 1rem;
 }
 
 .TableLabel {
@@ -79,7 +80,25 @@
     background-color: aliceblue;
     width: 100%;
     display: flex;
-    height: 50vh;
+    height: 70%;
     border-radius: 10px;
     flex-direction: column;
+}
+
+.pagination-controls {
+    display: flex;
+    justify-content:space-around;
+    flex-direction: row;
+    padding-bottom: 2%;
+}
+
+.num-items {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    padding-left: 3%;
+}
+
+.page-selection {
+    padding-right: 5%;
 }
