--- a/frontend/src/app/components/Dropdown.css
+++ b/frontend/src/app/components/Dropdown.css
@@ -1,46 +1,46 @@
 
 .dropdown {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    /* align-items: flex-start;
     align-content: flex-start;
-    background-color: #d9d9d9;
-    padding: 10px 0px 10px 0px;
+    justify-content: flex-start; */
+    background-color: #ffffff;
+    padding: 3% 0% 3% 0%;
+    flex-direction: column;
 }
 
 .dropdown-title {
-    color: black;
-    padding-bottom: 10px;
-    padding-left: 10px;
+    font-weight: bold;
+    padding-bottom: 3%;
 }
 
 .dropdown-select {
     background-color: white;
-    color: #d9d9d9;
-    width: 80%;
-    height: 40px;
+    color: #D9D9D9;
+    width: 14vw;
+    height: 5vh;
     margin: auto;
-}
-
-.dropdown-option {
-    color: black;
+    border-radius: 5px;
+    padding: 0;
+    margin: 0;
+    border: 1px solid black;
 }
 
 /* Style the arrow inside the select element: */
 .select-selected:after {
     position: absolute;
     content: "";
-    top: 14px;
-    right: 10px;
+    top: 7%;
+    right: 5%;
     width: 0;
     height: 0;
-    border: 6px solid transparent;
+    border: 3% solid transparent;
     border-color: #fff transparent transparent transparent;
   }
 
   /* Point the arrow upwards when the select box is open (active): */
 .select-selected.select-arrow-active:after {
     border-color: transparent transparent #fff transparent;
-    top: 7px;
+    top: 7%;
   }
 
