--- a/frontend/src/app/components/15Tablecomp/EliTable.css
+++ b/frontend/src/app/components/15Tablecomp/EliTable.css
@@ -1,3 +1,11 @@
+body, html {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    align-items: center; 
+    justify-content: center; 
+}
+
 .Table {
     background-color: aliceblue;
     height: 80vh;
@@ -6,11 +14,12 @@
     flex-direction: column; 
     border: 3px solid black;
     border-radius: 10px;
+    
 }
 
 .Header {
     background-color: beige;
-    height: 30%;
+    height: 20%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -36,7 +45,7 @@
     border: 1px solid #ccc;
     flex-grow: 2;
     margin-right: 15px;
-    min-width: 60vh;
+    min-width: 60vw;
 }
 
 .buttons {
@@ -80,16 +89,23 @@
     background-color: aliceblue;
     width: 100%;
     display: flex;
-    height: 70%;
+    height: 80%;
     border-radius: 10px;
     flex-direction: column;
+    max-height: 100%; 
+    overflow-y: auto;
 }
 
 .pagination-controls {
     display: flex;
     justify-content:space-around;
     flex-direction: row;
-    padding-bottom: 2%;
+    position: sticky;
+    bottom: 0;
+    background-color: white; /* Add a background to avoid overlap with content */
+    padding: 10px;
+    text-align: center;
+    border-radius: 10px;
 }
 
 .num-items {
