--- a/frontend/src/app/components/15Tablecomp/EliUnit.css
+++ b/frontend/src/app/components/15Tablecomp/EliUnit.css
@@ -1,8 +1,8 @@
 .unit {
     display: flex;
-    background-color: aliceblue;
+    background-color: white;
     width: 100%;
-    min-height: 10vh;
+    min-height: 7vh;
     justify-content: space-around;
     align-items: center;
     color: #000000;
@@ -60,10 +60,23 @@
     text-align: center;
 }
 
-.drop-down button {
+.drop-down {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.drop-downBtn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    background-color: none;
     margin-top: 1vh;
     width:11vh;
     height: 4vh;
+    background-color: white;
+    border: none;
 }
 
 .tags {
