--- a/frontend/src/app/inventory/15Tablecomp/Inventory.css
+++ b/frontend/src/app/inventory/15Tablecomp/Inventory.css
@@ -102,7 +102,7 @@ body, html {
     flex-direction: row;
     position: sticky;
     bottom: 0;
-    background-color: white; /* Add a background to avoid overlap with content */
+    background-color: white;
     padding: 10px;
     text-align: center;
     border-radius: 10px;
@@ -118,3 +118,5 @@ body, html {
 .page-selection {
     padding-right: 5%;
 }
+
+
