--- a/frontend/src/app/components/15Tablecomp/EliUnit.css
+++ b/frontend/src/app/components/15Tablecomp/EliUnit.css
@@ -119,17 +119,28 @@
     height: 4vh;
     background-color: white;
     border: none;
+    cursor: pointer;
 }
 
 .tags {
-    width: 4vh !important;
-    height: 5vh;
-    background-color: #c3c9c9;
-    margin-left: 1vh;
     display: flex;
     align-items: center;
-    justify-content: center; 
-    border-radius: 4px; 
+    overflow-x: auto;  
+    overflow-y: hidden;
+    white-space: nowrap; 
+    justify-content: center;
+    padding: 0 1vh; 
+    height: 5vh;
+    width: 50vh; 
+}
+
+.tag {
+    margin-right: 1vh; 
+    font-size: 1.5vh; 
+}
+
+.unit Popup {
+    display: none;
 }
 
 
