--- a/frontend/src/app/inventory/15Tablecomp/Inventory.css
+++ b/frontend/src/app/inventory/15Tablecomp/Inventory.css
@@ -7,9 +7,11 @@ body, html {
 }
 
 .Table {
-    background-color: white;
-    height: 100vh;
-    width: 90vw;
+    margin: auto;
+    background-color: aliceblue;
+    height: 80vh;
+    /* width: 100%; */
+    width: 70vw;
     display: flex;
     flex-direction: column; 
     border: 3px solid black;
@@ -27,7 +29,7 @@ body, html {
     justify-content: flex-start;
     position: relative;
     border-radius: 10px;
-    padding: 3%;
+    padding: 0;
 }
 
 .Items {
@@ -49,9 +51,11 @@ body, html {
     min-width: 30vw;
     height:5vh;
     background-color: #D9D9D9;
+
 }
 
 .buttons {
+    z-index: 10000;
     display: flex;
     gap: 10px;
     height: 5vh;
@@ -131,7 +135,7 @@ body, html {
     flex-direction: row;
     position: sticky;
     bottom: 0;
-    background-color: white; /* Add a background to avoid overlap with content */
+    background-color: white;
     padding: 10px;
     text-align: center;
     border-radius: 10px;
@@ -140,6 +144,7 @@ body, html {
 
 
 .num-items {
+    /* height: 5vh; */
     display: flex;
     flex-direction: row;
     padding-left: 3%;
