--- a/frontend/src/app/inventory/15Tablecomp/Inventory.css
+++ b/frontend/src/app/inventory/15Tablecomp/Inventory.css
@@ -9,8 +9,8 @@ body, html {
 .Table {
     margin: auto;
     background-color: aliceblue;
-    height: 85vh; /* Increase height to give more space */
-    width: 70vw;
+    height: 95vh; /* Increase height to give more space */
+    width: 90vw;
     display: flex;
     flex-direction: column;
     border: 3px solid black;
@@ -35,21 +35,19 @@ body, html {
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    padding: 2% 2%;  /* Add some extra padding to push the items up */
-    gap: 5%;
+    padding: 1px;
 }
 
 .Searchbar {
     flex-grow: 2;
-    margin-right: 15px;
-    margin-top: -2%;  /* Move the search bar up slightly */
-    padding: 20px;
+    margin-left: 25px;
+    padding: 1px;
 }
 
 .Searchbar input[type="text"] {
-    padding: 8px;
+    padding: 4px;
     border: 1px solid #ccc;
-    width: 100%;
+    width: 60%;
     height: 5vh;
     background-color: #D9D9D9;
 }
@@ -61,7 +59,7 @@ body, html {
     gap: 10px;
     height: 5vh;
     align-items: center;
-    margin-top: -2%;  /* Move buttons up slightly */
+    margin-right: 25px;
 }
 
 .addBtn, .brwBtn {
