--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -134,3 +134,11 @@ a {
   margin-top: 5px;
   display: inline-block;
 }
+
+h3 {
+  font-family: Akatab;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
