--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -137,8 +137,16 @@ a {
 
 h3 {
   font-family: Akatab;
-  font-size: 24px;
+  font-size: 1.75rem;
   font-style: normal;
   font-weight: 600;
+  line-height: normal;
+}
+
+p {
+  font-family: Akatab;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
   line-height: normal;
 }
