--- a/frontend/src/app/components/AddPage.css
+++ b/frontend/src/app/components/AddPage.css
@@ -27,13 +27,6 @@
     line-height: normal;
 }
 
-.box__dragndrop,
-.box__uploading,
-.box__success,
-.box__error {
-  display: none;
-}
-
 .left {
     display: flex;
     padding-top: 2rem;
@@ -62,7 +55,16 @@
 
 .garment-type-container {
     display: flex;
-    width: 340px;
+    width: 50%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 10px;
+}
+
+.time-period-component {
+    display: flex;
+    width: 50%;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
@@ -79,6 +81,7 @@
 
 #drop-zone {
     width: 100%;
+    height: 100%;
     border: 1px solid #9B525F;
     border-radius: 1px;
     display: flex;
@@ -88,10 +91,6 @@
     text-align: center;
     margin: 20px 0;
     cursor: pointer;
-    /* background-image: url("../../../public/icons/upload.svg"); */
-    /* background-repeat: no-repeat;
-    background-position: center;
-    background-size: 30%; */
     background-color: #FFF;
     transition: background-color 0.3s, border-color 0.3s;
 }
@@ -109,4 +108,16 @@
     margin-top: 10px;
     max-width: 100%;
     max-height: 150px;
+}
+
+.garment-and-time {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.singleSelect {
+    border-radius: 3px;
+    border: 1px solid #9B525F;
+    background: #FFF;
 }
