--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -134,3 +134,8 @@ a {
   margin-top: 5px;
   display: inline-block;
 }
+
+/*-------------Keep Sidebar Unique-------------*/
+.adjacent {
+  margin-left: 90px;
+}
