--- a/frontend/src/app/components/Dropdown.css
+++ b/frontend/src/app/components/Dropdown.css
@@ -1,9 +1,5 @@
-
 .dropdown {
     display: flex;
-    /* align-items: flex-start;
-    align-content: flex-start;
-    justify-content: flex-start; */
     background-color: #ffffff;
     padding: 3% 0% 3% 0%;
     flex-direction: column;
@@ -16,14 +12,14 @@
 
 .dropdown-select {
     background-color: white;
-    color: #D9D9D9;
+    color: #7a1e1e;
     width: 14vw;
     height: 5vh;
     margin: auto;
     border-radius: 5px;
     padding: 0;
     margin: 0;
-    border: 1px solid black;
+    border-color: 1px solid rgba(155, 82, 95, 1); /* Updated border color */
 }
 
 /* Style the arrow inside the select element: */
@@ -35,12 +31,11 @@
     width: 0;
     height: 0;
     border: 3% solid transparent;
-    border-color: #fff transparent transparent transparent;
-  }
+    border-color: (155, 82, 95, 1);  /* Updated border color */
+}
 
-  /* Point the arrow upwards when the select box is open (active): */
+/* Point the arrow upwards when the select box is open (active): */
 .select-selected.select-arrow-active:after {
-    border-color: transparent transparent #fff transparent;
+    border-color: transparent transparent rgba(155, 82, 95, 1) transparent; /* Updated border color */
     top: 7%;
-  }
-
+}
