--- a/frontend/src/app/components/StylishButton.css
+++ b/frontend/src/app/components/StylishButton.css
@@ -14,10 +14,23 @@
   
   /* style option 1: white background with black border */
   .stylish-button.style1 {
-    width: 109px;
-    height: 50px;
+    display: inline-flex;
+    padding: 11px 20px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 5px;
+    border: 1px solid #9B525F;
     background: #FFF;
-    border: 1px solid #000;
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
+    color: #000;
+    text-align: center;
+    font-family: Akatab;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    flex-shrink: 1;
   }
   
   /* style option 2: gray background*/
