--- a/frontend/src/app/components/StylishButton.css
+++ b/frontend/src/app/components/StylishButton.css
@@ -51,3 +51,10 @@
     color: white;
     border-radius: 2px;
   }
+
+  .stylish-button.style4 {
+    background:none; 
+    color:#000;
+    border: none;
+    box-shadow: none;
+  }
