--- a/frontend/src/app/inventory/15Tablecomp/Inventory.css
+++ b/frontend/src/app/inventory/15Tablecomp/Inventory.css
@@ -137,7 +137,7 @@ gap: 10px;
     flex: 1;
 }
 
-.leftBtn, .rightBtn, .pageNum {
+/* .leftBtn, .rightBtn, .pageNum {
     padding: 8px 12px;
     border: none;
     color: black;
@@ -145,7 +145,7 @@ gap: 10px;
     transition: background-color 0.3s;
     border-radius: 2px;
     background: none;
-}
+} */
 
 .view {
     color: #000;
