--- a/frontend/src/app/inventory/15Tablecomp/Inventory.css
+++ b/frontend/src/app/inventory/15Tablecomp/Inventory.css
@@ -59,26 +59,42 @@ box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
 
 .TableLabels {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: flex-start;
+    padding-bottom: 1vh;
     width: 90%;
-    padding-left: 8%;
     padding-right: 10%;
     position: absolute;
-    bottom: -2px; 
+    bottom: 0; 
     gap: 2vh;
     font-size: 1rem;
     margin-top: 2vh;
-    align-content: center;
+    align-content: flex-start;
 }
 
-.TableLabel {
-    flex: 1;
-    text-align: center;
-    padding: 10px 0;
+.IDLabel {
+    padding-left: 7.8%;
     color: #333;
 }
 
+.ItemLabel {
+    padding-left: 9.3%;
+    color: #333;
+}
 
+.AvaiLabel {
+    padding-left: 7.5%;
+    color: #333;
+}
+
+.ConLabel {
+    padding-left: 3.8%;
+    color: #333;
+}
+
+.TagsLabel {
+    padding-left: 10%;
+    color: #333;
+}
 
 #NameTag, #SelectAll {
     cursor: pointer;
@@ -137,9 +153,9 @@ box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
     margin-right: auto;
     flex: 0; 
     display: inline-flex;
-justify-content: center;
-align-items: center;
-gap: 10px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
 }
 
 .page-selection {
@@ -159,6 +175,10 @@ gap: 10px;
     border-radius: 2px;
     background: none;
 } */
+
+.pageNum:onClick {
+    background-color: #9B525F;
+}
 
 .view {
     color: #000;
